--- a/unitrycompiler_tfq.ipynb
+++ b/unitrycompiler_tfq.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,32 +127,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qc = tfq.convert_to_tensor([cirq.resolve_parameters(circuit,resolver)])\n",
     "qc = tfq.convert_to_tensor([circuit])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.RaggedTensor [[[(0.9489362835884094-0.08517752587795258j), (0.11859248578548431+0.27964353561401367j)], [(-0.11859248578548431+0.27964353561401367j), (0.9489362835884094+0.08517751842737198j)]]]>"
+       "<tf.RaggedTensor [[[(0.9325412511825562-0.3369160592556j), (-0.08047006279230118+0.10187721997499466j)], [(0.08047006279230118+0.10187721997499466j), (0.9325412511825562+0.3369160592556j)]]]>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tfq.layers.Unitary()(qc, symbol_names = list(resolver.keys()), symbol_values=[list(resolver.values())])"
+    "unit_lay.trainable_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[0.96629125]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expe = tfq.layers.Expectation()\n",
+    "resolved_circuit = cirq.resolve_parameters(circuit,resolver)\n",
+    "qc = tfq.convert_to_tensor([resolved_circuit])\n",
+    "expe(qc, operators = tfq.convert_to_tensor([[cirq.Z.on(qubit)]]),symbol_names=list(resolver.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'expectation_9/circuit_learnable_parameters:0' shape=(3,) dtype=float32, numpy=array([3.6744487, 4.432568 , 2.6254592], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expe.trainable_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.RaggedTensor [[[(0.9325412511825562-0.3369160592556j), (-0.08047006279230118+0.10187721997499466j)], [(0.08047006279230118+0.10187721997499466j), (0.9325412511825562+0.3369160592556j)]]]>"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit_lay = tfq.layers.Unitary()\n",
+    "unit_lay(qc, symbol_names = list(resolver.keys()), symbol_values=[list(resolver.values())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.RaggedTensor [[[(0.9325412511825562-0.3369160592556j), (-0.08047006279230118+0.10187721997499466j)], [(0.08047006279230118+0.10187721997499466j), (0.9325412511825562+0.3369160592556j)]]]>"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit_lay = tfq.layers.Unitary()\n",
+    "unit_lay(qc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit_lay.trainable_weights"
    ]
   },
   {
@@ -160,6 +282,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1,), dtype=string, numpy=array([b'\\n\\x0f\\r\\x00\\x00\\x80?\\x1a\\x08\\n\\x030_0\\x12\\x01X'], dtype=object)>"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operators = tfq.convert_to_tensor([cirq.X.on(qubit)])\n",
+    "operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Incompatible item passed into  convert_to_tensor. Tensor detected type: None. got: <class 'cirq.devices.grid_qubit.GridQubit'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-105-8461bc2334ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexpe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moperators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtfq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert_to_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcirq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqubit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msymbol_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/tensorflow/python/autograph/impl/api.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    300\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    301\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mag_ctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mControlStatusCtx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mag_ctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDISABLED\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 302\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    303\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0minspect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mismethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/tensorflow_quantum/python/util.py\u001b[0m in \u001b[0;36mconvert_to_tensor\u001b[0;34m(items_to_convert)\u001b[0m\n\u001b[1;32m    205\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m     \u001b[0;31m# This will catch impossible dimensions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 207\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert_to_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecur\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems_to_convert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    208\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/tensorflow_quantum/python/util.py\u001b[0m in \u001b[0;36mrecur\u001b[0;34m(items_to_convert, curr_type)\u001b[0m\n\u001b[1;32m    201\u001b[0m                 raise TypeError(\"Incompatible item passed into \"\n\u001b[1;32m    202\u001b[0m                                 \u001b[0;34m\" convert_to_tensor. Tensor detected type: {}.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 203\u001b[0;31m                                 \" got: {}\".format(curr_type, type(item)))\n\u001b[0m\u001b[1;32m    204\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtensored_items\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Incompatible item passed into  convert_to_tensor. Tensor detected type: None. got: <class 'cirq.devices.grid_qubit.GridQubit'>"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -216,21 +381,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'expectation_9/circuit_learnable_parameters:0' shape=(3,) dtype=float32, numpy=array([3.6744487, 4.432568 , 2.6254592], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expe.trainable_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Ucompiler(tf.keras.Model):\n",
-    "    def __init__(self, symbols, observable, batch_sizes=1):\n",
+    "    def __init__(self):\n",
     "        \"\"\"\n",
     "        symbols: symbolic variable [sympy.Symbol]*len(rotations_in_circuit)\n",
     "        batch_size: how many circuits you feed the model at, at each call (this might )\n",
     "        \"\"\"\n",
     "        super(Ucompiler,self).__init__()\n",
     "        self.unitary_layer = tfq.layers.Unitary()\n",
-    "        self.symbols = symbols\n",
-    "    def call(self, inputs):\n",
-    "        return self.unitary_layer()(inputs, symbol_names = self.symbols, symbol_values = self.trainable_variables)"
+    "        self.tvars = [tf.random.uniform([3])*0.]\n",
+    "        gts=[cirq.rx, cirq.rz,cirq.rx]\n",
+    "        symbols_names = [str(k) for k in range(3)]\n",
+    "        self.symbols = [sympy.Symbol(\"{}\".format(k)) for k in range(3)]\n",
+    "        cirq.Circuit([g(sym).on(qubit) for g,sym in zip(gts, symbols)])\n",
+    "        qubit = cirq.GridQubit.rect(1, 1)[0]\n",
+    "        self.circuit = cirq.Circuit([g(sym).on(qubit) for g,sym in zip(gts, symbols)])\n",
+    "        self.example_resolver = {s:k for s,k in zip(symbols_names, np.random.randn(len(symbols)))}\n",
+    "        \n",
+    "    def call(self,dummy):\n",
+    "        return self.unitary_layer(self.circuit, symbol_names=list(self.example_resolver.keys()), symbol_values=self.tvars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utr = Ucompiler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.RaggedTensor [[[(1+0j), 0j], [0j, (1+0j)]]]>"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utr(\"dummy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.RaggedTensor [[[(1+0j), 0j], [0j, (1+0j)]]]>"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utr.unitary_layer(utr.circuit, symbol_names=list(utr.example_resolver.keys()), symbol_values=utr.tvars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.GradientTape() as tape:\n",
+    "    tape.watch(utr.tvars)\n",
+    "    preds = utr(\"dummy\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuit_input = tf.keras.Input(shape=(), dtype=tf.string)\n",
+    "output = tfq.layers.Unitary()(circuit_input, symbol_names=[str(k) for k in range(3)], symbol_values=[[1,2,3]])\n",
+    "model = tf.keras.Model(inputs=circuit_input, outputs=output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=\"mse\", optimizer=\"adam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gts=[cirq.rx, cirq.rz,cirq.rx]\n",
+    "symbols_names = [str(k) for k in range(3)]\n",
+    "symbols = [sympy.Symbol(\"{}\".format(k)) for k in range(3)]\n",
+    "circuit = cirq.Circuit([g(sym).on(qubit) for g,sym in zip(gts, symbols)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.RaggedTensor [[[(0.9196106195449829-0.3082832098007202j), (0.1032203659415245+0.22050705552101135j)], [(-0.1032203659415245+0.22050705552101135j), (0.9196106195449829+0.3082832098007202j)]]]>"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resolver = {s:k for s,k in zip(symbols_names, np.random.randn(len(symbols)))}\n",
+    "\n",
+    "model(tfq.convert_to_tensor([cirq.resolve_parameters(circuit,resolver)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.trainable_variables"
    ]
   },
   {
@@ -245,6 +580,129 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = cirq.GridQubit(0, 0)\n",
+    "\n",
+    "(a, b, c) = sympy.symbols(\"a b c\")\n",
+    "circuit = cirq.Circuit(\n",
+    "    cirq.rx(a)(q),\n",
+    "    cirq.rz(b)(q),\n",
+    "    cirq.rx(c)(q),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs = tfq.layers.PQC(circuit, cirq.Z(q))\n",
+    "quantum_data = tfq.convert_to_tensor([\n",
+    "    cirq.Circuit(),\n",
+    "])\n",
+    "#measurement = [cirq.X(q), cirq.Y(q), cirq.Z(q)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'parameters:0' shape=(3,) dtype=float32, numpy=array([3.14853  , 5.393635 , 5.0334935], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ot = outputs([cirq.Circuit()])\n",
+    "outputs.trainable_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[a, b, c]"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[-0.31975532]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ot.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
